welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:39: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getDirection() == Direction.OUEST){
    ^SnakeBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getDirection() == Direction.EST){
    ^SnakeBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur){
  ^